Overall structure creation and formatting

--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nick's Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+<div id="header"><span class="sitelogo">Nick's Portfolio</span></div>
+<div id="subcontainer">
+    <div id="about">
+        <img src="images/headshot.png" alt="Headshot" class="headshot">
+        <h2>About Me</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue ante sit amet mauris semper, eu vulputate arcu molestie. Donec vitae lectus dignissim, varius leo lacinia, cursus eros. Vestibulum quis ligula ut augue porttitor porta. Donec nec dui eget metus scelerisque ultrices. Curabitur suscipit, urna vel venenatis ornare, risus mauris viverra dui, vitae tincidunt lectus urna nec ex. Ut et odio non sem tincidunt tristique sed ac massa. Etiam imperdiet elit imperdiet justo feugiat vestibulum. Pellentesque euismod dignissim viverra.</p>
+        <div id="contact">
+        <h2>Contact Me</h2>
+        <a href="https://www.linkedin.com/in/nmarcisso/" target="_blank"><img src="images/linkedin.jfif" alt="LinkedIn"></a>
+    </div>
+    </div>
+    <div id="projects">
+        <div class="projectinfo">
+            <img src="images/dtgimage.png" alt="Project Image">
+            <h1>Day Trip Generator</h1>
+            <span class="projectlink"><a href="https://github.com/nmar30/day-trip-generator_proj" target="_blank">GitHub Project Link</a></span>
+            <p>Randomly generates trips based on array data and allows you to regenerate options on a as needed basis.</p>
+        </div>
+        <div class="projectinfo" >
+            <img src="images/placeholder.png" alt="Project Image">
+            <h1>Project Name</h1>
+            <span class="projectlink">Project GitHub Link</span>
+            <p>Maecenas consectetur mauris et lacinia tincidunt. Etiam hendrerit purus sit amet malesuada sagittis. Suspendisse quis malesuada massa. Nullam ac quam libero. Etiam varius commodo neque, ut interdum nulla dapibus non. Nunc lacinia nunc a velit luctus auctor. Integer laoreet semper magna, ut mattis erat dictum non. Nullam quis purus a justo cursus suscipit a sed mauris. Maecenas vel pellentesque diam. Cras auctor sapien eget ex pellentesque malesuada. Curabitur ornare eget tortor quis luctus.</p>
+        </div>
+        <div class="projectinfo">
+            <img src="images/placeholder.png" alt="Project Image">
+            <h1>Project Name</h1>
+            <span class="projectlink">Project GitHub Link</span>
+            <p>Maecenas consectetur mauris et lacinia tincidunt. Etiam hendrerit purus sit amet malesuada sagittis. Suspendisse quis malesuada massa. Nullam ac quam libero. Etiam varius commodo neque, ut interdum nulla dapibus non. Nunc lacinia nunc a velit luctus auctor. Integer laoreet semper magna, ut mattis erat dictum non. Nullam quis purus a justo cursus suscipit a sed mauris. Maecenas vel pellentesque diam. Cras auctor sapien eget ex pellentesque malesuada. Curabitur ornare eget tortor quis luctus.</p>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
