Added content and minor bug fixes

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <div id="about">
         <img src="images/headshot.png" alt="Headshot" class="headshot">
         <h2>About Me</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec congue ante sit amet mauris semper, eu vulputate arcu molestie. Donec vitae lectus dignissim, varius leo lacinia, cursus eros. Vestibulum quis ligula ut augue porttitor porta. Donec nec dui eget metus scelerisque ultrices. Curabitur suscipit, urna vel venenatis ornare, risus mauris viverra dui, vitae tincidunt lectus urna nec ex. Ut et odio non sem tincidunt tristique sed ac massa. Etiam imperdiet elit imperdiet justo feugiat vestibulum. Pellentesque euismod dignissim viverra.</p>
-        <div id="contact">
-        <h2>Contact Me</h2>
-        <a href="https://www.linkedin.com/in/nmarcisso/" target="_blank"><img src="images/linkedin.jfif" alt="LinkedIn"></a>
-    </div>
+        <p>Hi, my name is Nick. I am currently transitioning from my background in System Administration to Software Development and DevOps.</p>
+        <p>I have 8+ years of Information Technology experience in the MSP industry maintaining client infrastructures. This includes Microsoft 365, Active Directory, Servers, Network and Storage Systems. I also have an Azure Fundamentals certification and 5+ years’ in managing Microsoft 365 tenants.</p>
+        <p>For contact information please reach out to me on LinkedIn.</p>
+            <div id="contact">
+            <h2>Contact Me</h2>
+            <a href="https://www.linkedin.com/in/nmarcisso/" target="_blank"><img src="images/linkedin.jfif" alt="LinkedIn"></a>
+            </div>
     </div>
     <div id="projects">
         <div class="projectinfo">
@@ -30,13 +32,13 @@
             <img src="images/placeholder.png" alt="Project Image">
             <h1>Project Name</h1>
             <span class="projectlink">Project GitHub Link</span>
-            <p>Maecenas consectetur mauris et lacinia tincidunt. Etiam hendrerit purus sit amet malesuada sagittis. Suspendisse quis malesuada massa. Nullam ac quam libero. Etiam varius commodo neque, ut interdum nulla dapibus non. Nunc lacinia nunc a velit luctus auctor. Integer laoreet semper magna, ut mattis erat dictum non. Nullam quis purus a justo cursus suscipit a sed mauris. Maecenas vel pellentesque diam. Cras auctor sapien eget ex pellentesque malesuada. Curabitur ornare eget tortor quis luctus.</p>
+            <p>Insert project description here.</p>
         </div>
         <div class="projectinfo">
             <img src="images/placeholder.png" alt="Project Image">
             <h1>Project Name</h1>
             <span class="projectlink">Project GitHub Link</span>
-            <p>Maecenas consectetur mauris et lacinia tincidunt. Etiam hendrerit purus sit amet malesuada sagittis. Suspendisse quis malesuada massa. Nullam ac quam libero. Etiam varius commodo neque, ut interdum nulla dapibus non. Nunc lacinia nunc a velit luctus auctor. Integer laoreet semper magna, ut mattis erat dictum non. Nullam quis purus a justo cursus suscipit a sed mauris. Maecenas vel pellentesque diam. Cras auctor sapien eget ex pellentesque malesuada. Curabitur ornare eget tortor quis luctus.</p>
+            <p>Insert project description here.</p>
         </div>
     </div>
 </div>
