further mobile refinements

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </div>
     </div>
     <div id="projects">
+        <h1>Projects</h1>
         <div class="projectinfo">
             <img src="images/dtgimage.png" alt="Project Image">
             <h1>Day Trip Generator</h1>
