--- a/index.html
+++ b/index.html
@@ -24,22 +24,25 @@
     <div id="projects">
         <h1>Projects</h1>
         <div class="projectinfo">
-            <img src="images/dtgimage.png" alt="Project Image">
-            <h1>Day Trip Generator</h1>
-            <span class="projectlink"><a href="https://github.com/nmar30/day-trip-generator_proj" target="_blank">GitHub Project Link</a></span>
-            <p>Randomly generates trips based on array data and allows you to regenerate options on a as needed basis.</p>
+            <img src="images/rvdimage.png" alt="Project Image">
+            <h1>Robots Vs. Dinosaurs</h1>
+            <h2>Code: Python</h2>
+            <span class="projectlink"><a href="https://github.com/nmar30/robots_vs_dinosaurs_proj"target="_blank">Project GitHub Link</a></span>
+            
         </div>
         <div class="projectinfo" >
-            <img src="images/placeholder.png" alt="Project Image">
-            <h1>Project Name</h1>
-            <span class="projectlink">Project GitHub Link</span>
-            <p>Insert project description here.</p>
+            <img src="images/dtgimage.png" alt="Project Image">
+            <h1>Most Wanted</h1>
+            <h2>Code: Javascript</h2>
+            <span class="projectlink"><a href="https://github.com/nmar30/most-wanted" target="_blank">GitHub Project Link</a></span>
+            
         </div>
         <div class="projectinfo">
-            <img src="images/placeholder.png" alt="Project Image">
-            <h1>Project Name</h1>
-            <span class="projectlink">Project GitHub Link</span>
-            <p>Insert project description here.</p>
+            <img src="images/dtgimage.png" alt="Project Image">
+            <h1>Day Trip Generator</h1>
+            <h2>Code: Javascript</h2>
+            <span class="projectlink"><a href="https://github.com/nmar30/day-trip-generator_proj" target="_blank">GitHub Project Link</a></span>
+            <!-- <p>Randomly generates trips based on array data and allows you to regenerate options on a as needed basis.</p> -->
         </div>
     </div>
 </div>
