--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         <h1>Projects</h1>
         <div class="projectinfo">
             <img src="images/rvdimage.png" alt="Project Image">
+            <h1>Rock, Paper, Scissors, Lizard, Spock</h1>
+            <h2>Code: Python</h2>
+            <span class="projectlink"><a href="https://github.com/nmar30/rpsls_proj"target="_blank">Project GitHub Link</a></span>
+            
+        </div>
+        <div class="projectinfo">
+            <img src="images/rvdimage.png" alt="Project Image">
             <h1>Robots Vs. Dinosaurs</h1>
             <h2>Code: Python</h2>
             <span class="projectlink"><a href="https://github.com/nmar30/robots_vs_dinosaurs_proj"target="_blank">Project GitHub Link</a></span>
