--- a/index.html
+++ b/index.html
@@ -5,21 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nick's Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div id="header"><span class="sitelogo">Nick's Portfolio</span></div>
 <div id="subcontainer">
     <div id="about">
-        <img src="images/headshot.png" alt="Headshot" class="headshot">
         <h1>About Me</h1>
         <p>Hi, my name is Nick. I am currently transitioning from my background in System Administration to Software Development and DevOps.</p>
         <p>I have 8+ years of Information Technology experience in the MSP industry maintaining client infrastructures. This includes Microsoft 365, Active Directory, Servers, Network and Storage Systems. I also have an Azure Fundamentals certification and 5+ years’ in managing Microsoft 365 tenants.</p>
         <p>For contact information please reach out to me on LinkedIn.</p>
-            <div id="contact">
-            <h1>Contact Me</h1>
-            <a href="https://www.linkedin.com/in/nmarcisso/" target="_blank"><img src="images/linkedin.jfif" alt="LinkedIn"></a>
-            </div>
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="nmarcisso" data-version="v1"></div>
     </div>
     <div id="projects">
         <h1>Projects</h1>
@@ -53,6 +50,7 @@
         </div>
     </div>
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 </html>
