--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
     <div id="projects">
         <h1>Projects</h1>
         <div class="projectinfo">
+            <img src="images/react.png" alt="Project Image">
+            <h1>Flashcards Frontend</h1>
+            <h2>Code: React/Javascript</h2>
+            <span class="projectlink"><a href="https://github.com/nmar30/flashcards_frontend"target="_blank">Project GitHub Link</a></span>
+        </div>
+        <div class="projectinfo">
+            <img src="images/python.png" alt="Project Image">
+            <h1>Flashcards Backend</h1>
+            <h2>Code: Django/Python</h2>
+            <span class="projectlink"><a href="https://github.com/nmar30/flashcards_backend"target="_blank">Project GitHub Link</a></span>
+        </div>
+        <div class="projectinfo">
             <img src="images/rvdimage.png" alt="Project Image">
             <h1>Rock, Paper, Scissors, Lizard, Spock</h1>
             <h2>Code: Python</h2>
